Add myActivity.html page with hiking content and image, plus navigation link from index.html

--- a/index.html
+++ b/index.html
@@ -73,5 +73,9 @@
         <li>Better Call Saul</li>
         <li>The Mandalorian</li>
     </ul>
+    
+    <hr>
+    
+    <p><a href="myActivity.html">Learn about my favorite outdoor activity - Hiking!</a></p>
 </body>
 </html>
