Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Web Applications Assignment 3 - Anji Reddy Modugula</title>
 </head>
 <body>
+    <p style="text-align: center; margin-bottom: 20px;"><a href="bonus.html">BONUS </a></p>
+    
     <h1>Welcome to Anji Reddy Modugula's Web Page</h1>
     
     <h2>My Favorite Television Show: Breaking Bad</h2>
